@@ -20,7 +20,9 @@
 
 package cascading.pipe;
 
+import java.lang.reflect.Type;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -1028,18 +1030,11 @@ public class Splice extends Pipe
       Map<String, Fields> groupingSelectors = getKeySelectors();
       Map<String, Fields> groupingFields = resolveSelectorsAgainstIncoming( incomingScopes, groupingSelectors, "grouping" );
 
-      Iterator<Fields> iterator = groupingFields.values().iterator();
-      int size = iterator.next().size();
+      if( !verifySameSize( groupingFields ) )
+        throw new OperatorException( this, "all grouping fields must be same size:" + toString() );
 
-      while( iterator.hasNext() )
-        {
-        Fields groupingField = iterator.next();
-
-        if( groupingField.size() != size )
-          throw new OperatorException( this, "all grouping fields must be same size:" + toString() );
-
-        size = groupingField.size();
-        }
+      if( !verifySameTypes( groupingSelectors, groupingFields ) )
+        throw new OperatorException( this, "all grouping fields must declare same types:" + toString() );
 
       return groupingFields;
       }
@@ -1051,6 +1046,70 @@ public class Splice extends Pipe
       {
       throw new OperatorException( this, "could not resolve grouping selector in: " + this, exception );
       }
+    }
+
+  private boolean verifySameTypes( Map<String, Fields> groupingSelectors, Map<String, Fields> groupingFields )
+    {
+    // create array of field positions with comparators
+    // unsure which side has the comparators declared so make a union
+    boolean[] hasComparator = new boolean[ groupingFields.values().iterator().next().size() ];
+
+    for( Map.Entry<String, Fields> entry : groupingSelectors.entrySet() )
+      {
+      Comparator[] comparatorsArray = entry.getValue().getComparators();
+
+      for( int i = 0; i < comparatorsArray.length; i++ )
+        hasComparator[ i ] = hasComparator[ i ] || comparatorsArray[ i ] != null;
+      }
+
+    Iterator<Fields> iterator = groupingFields.values().iterator();
+    Type[] types = iterator.next().getTypes();
+
+    // if types are null, no basis for comparison
+    if( types == null )
+      return true;
+
+    while( iterator.hasNext() )
+      {
+      Fields groupingField = iterator.next();
+      Type[] groupingTypes = groupingField.getTypes();
+
+      // if types are null, no basis for comparison
+      if( groupingTypes == null )
+        return true;
+
+      for( int i = 0; i < types.length; i++ )
+        {
+        if( hasComparator[ i ] )
+          continue;
+
+        Type lhs = types[ i ];
+        Type rhs = groupingTypes[ i ];
+
+        if( !lhs.equals( rhs ) )
+          return false;
+        }
+      }
+
+    return true;
+    }
+
+  private boolean verifySameSize( Map<String, Fields> groupingFields )
+    {
+    Iterator<Fields> iterator = groupingFields.values().iterator();
+    int size = iterator.next().size();
+
+    while( iterator.hasNext() )
+      {
+      Fields groupingField = iterator.next();
+
+      if( groupingField.size() != size )
+        return false;
+
+      size = groupingField.size();
+      }
+
+    return true;
     }
 
   private Map<String, Fields> resolveSelectorsAgainstIncoming( Set<Scope> incomingScopes, Map<String, Fields> selectors, String type )
@@ -1122,16 +1181,12 @@ public class Splice extends Pipe
         int size = 0;
         boolean foundUnknown = false;
 
-        List<Fields> resolvedFields = new ArrayList<Fields>();
+        List<Fields> appendableFields = getOrderedResolvedFields( incomingScopes );
 
-        for( Scope incomingScope : incomingScopes )
+        for( Fields fields : appendableFields )
           {
-          Fields fields = incomingScope.getIncomingSpliceFields();
-
           foundUnknown = foundUnknown || fields.isUnknown();
           size += fields.size();
-
-          resolvedFields.add( fields );
           }
 
         // we must relax field checking in the face of unkown fields
@@ -1140,7 +1195,27 @@ public class Splice extends Pipe
           if( isSelfJoin() )
             throw new OperatorException( this, "declared grouped fields not same size as grouped values, declared: " + declaredFields.printVerbose() + " != size: " + size * ( numSelfJoins + 1 ) );
           else
-            throw new OperatorException( this, "declared grouped fields not same size as grouped values, declared: " + declaredFields.printVerbose() + " resolved: " + Util.print( resolvedFields, "" ) );
+            throw new OperatorException( this, "declared grouped fields not same size as grouped values, declared: " + declaredFields.printVerbose() + " resolved: " + Util.print( appendableFields, "" ) );
+          }
+
+        int i = 0;
+        for( Fields appendableField : appendableFields )
+          {
+          Class[] types = appendableField.getTypesClasses();
+
+          if( types == null )
+            {
+            i += appendableField.size();
+            continue;
+            }
+
+          for( Class type : types )
+            {
+            if( type != null )
+              declaredFields = declaredFields.applyType( i, type );
+
+            i++;
+            }
           }
 
         return declaredFields;
@@ -1149,37 +1224,28 @@ public class Splice extends Pipe
       // support merge or cogrouping here
       if( isGroupBy() || isMerge() )
         {
-        Fields commonFields = null;
+        Iterator<Scope> iterator = incomingScopes.iterator();
+        Fields commonFields = iterator.next().getIncomingSpliceFields();
 
-        for( Scope incomingScope : incomingScopes )
+        while( iterator.hasNext() )
           {
+          Scope incomingScope = iterator.next();
           Fields fields = incomingScope.getIncomingSpliceFields();
 
-          if( commonFields == null )
-            commonFields = fields;
-          else if( !commonFields.equals( fields ) )
-            throw new OperatorException( this, "merged streams must declare the same field names, expected: " + commonFields.printVerbose() + " found: " + fields.print() );
+          if( !commonFields.equalsFields( fields ) )
+            throw new OperatorException( this, "merged streams must declare the same field names, expected: " + commonFields.printVerbose() + " found: " + fields.printVerbose() );
           }
 
         return commonFields;
         }
       else
         {
-        Map<String, Scope> scopesMap = new HashMap<String, Scope>();
-
-        for( Scope incomingScope : incomingScopes )
-          scopesMap.put( incomingScope.getName(), incomingScope );
-
-        List<Fields> appendableFields = new ArrayList<Fields>();
-
-        for( Pipe pipe : pipes )
-          appendableFields.add( scopesMap.get( pipe.getName() ).getIncomingSpliceFields() );
-
+        List<Fields> appendableFields = getOrderedResolvedFields( incomingScopes );
         Fields appendedFields = new Fields();
 
         try
           {
-          // will throwFail on name collisions
+          // will fail on name collisions
           for( Fields appendableField : appendableFields )
             appendedFields = appendedFields.append( appendableField );
           }
@@ -1204,6 +1270,20 @@ public class Splice extends Pipe
       {
       throw new OperatorException( this, "could not resolve declared fields in: " + this, exception );
       }
+    }
+
+  private List<Fields> getOrderedResolvedFields( Set<Scope> incomingScopes )
+    {
+    Map<String, Scope> scopesMap = new HashMap<String, Scope>();
+
+    for( Scope incomingScope : incomingScopes )
+      scopesMap.put( incomingScope.getName(), incomingScope );
+
+    List<Fields> appendableFields = new ArrayList<Fields>();
+
+    for( Pipe pipe : pipes )
+      appendableFields.add( scopesMap.get( pipe.getName() ).getIncomingSpliceFields() );
+    return appendableFields;
     }
 
   @Override
